--- a/css/app.css
+++ b/css/app.css
@@ -16,17 +16,40 @@ h1,
 h2, 
 h3 {
     font-family: 'Playfair Display', serif;
-    margin: 0 0 5rem 0;
+    margin: 0 0 2rem 0;
 }
 h1 {
-    font-size: 5rem;
-}
-h2 {
     font-size: 4rem;
 }
-h3 {
-    font-size: 3rem;
+
+@media (min-width:768px ) {
+    h1 {
+        font-size: 5rem;
+    }
 }
+
+h2 {
+    font-size: 3.2rem;
+}
+
+@media (min-width: 768px) {
+    h2 {
+        font-size: 4rem;
+    }
+    
+}
+
+
+h3 {
+    font-size: 2.4rem;
+}
+
+@media (min-width: 768px) {
+    h3 {
+        font-size: 3rem;
+    }
+}
+
 a {
     text-decoration: none;
     color: #000;
@@ -50,10 +73,18 @@ img {
     transition: background-color .3s ease-out ;
     text-align: center;
     border: none;
+    width: 100%;
 }
 .btn:hover {
     background-color: #769c02;
     cursor: pointer;
+}
+
+@media (min-width: 768px) { 
+    .btn{
+        width: auto;
+    }
+    
 }
 
 /** Utilidades */
@@ -61,8 +92,11 @@ img {
     text-align: center;
 }
 
-.max-width-30 {
-    max-width: 30rem;
+@media (min-width: 768px) {
+    
+    .max-width-30 {
+        max-width: 30rem;
+    }
 }
 
 /** Header y Navegacion **/
@@ -79,7 +113,16 @@ img {
 .nav-principal {
     padding: 2rem 0;
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    align-items: center;
+ 
+}
+@media (min-width: 768px) {
+    
+    .nav-principal {
+        justify-content: space-between;
+        flex-direction: row;
+    }
 }
 
 .hero {
@@ -87,12 +130,31 @@ img {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
-    height: 55rem;
+    height: 25rem;
+}
+
+@media (min-width: 768px) {
+    .hero {
+        height: 55rem;
+    }
+    
 }
 
 /** Categorias **/
 .categorias {
-    padding-top: 5rem;
+    padding: 5rem 0;
+}
+.categoria{
+    margin-bottom: 2rem;
+}
+@media (min-width: 768px) {
+    .categoria{
+        margin-bottom: 0rem;
+    }
+    
+}
+.categoria img {
+    width: 100%;
 }
 .categoria a {
     text-align: center;
@@ -105,79 +167,124 @@ img {
     color: #FFFFFF;
     border-bottom-right-radius: 1rem;
 }
-.listado-categorias {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 2rem;
+@media (min-width: 768px) {
+    .listado-categorias {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 2rem;
+    }
+    
 }
 
 /** Bloque Nosotros */
 
 .sobre-nosotros {
-    background-image: linear-gradient( to right, transparent 50%, #037bc0 50%, #037bc0 100% ), url(../img/nosotros.jpg);
-    background-position: left center ;
-    padding: 10rem 0;
+    background-image: linear-gradient( to bottom, transparent 50%, #037bc0 50%, #037bc0 100% ), url(../img/nosotros.jpg);
+    background-position: center top left ;
     background-repeat: no-repeat;
-    background-size: 100%, 120rem;
+    background-size: 100%, 70rem;
+}
+
+@media (min-width: 768px) {
+    .sobre-nosotros {
+        background-image: linear-gradient( to right, transparent 50%, #037bc0 50%, #037bc0 100% ), url(../img/nosotros.jpg);
+        background-position: left center ;
+        padding: 10rem 0;
+        background-size: 100%, 120rem;
+    }
 }
 .sobre-nosotros-grid {
-    display: flex;
-    justify-content: flex-end;
+    display: grid;
+    grid-template-rows: repeat(2,1fr);
+    
+}
+
+@media (min-width: 768px) {
+    .sobre-nosotros-grid {
+        grid-template-columns: repeat(2,1fr) ;
+        grid-template-rows: unset;
+        column-gap: 10rem;
+        
+    }
+    
 }
 .texto-nosotros {
-    flex-basis: 50%;
-    padding-left: 10rem;
+   grid-row: 2/3;
+    
     color: #FFF;
+    padding: 5rem;
+
+}
+@media (min-width: 768px) {
+    .texto-nosotros {
+       grid-column: 2/3;
+    }
+    
 }
 
 /** Listado de Productos **/
 .contenido-principal {
     padding-top: 5rem;
 }
-.listado-productos {
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    gap: 2rem;
-}
-.producto:nth-child(1) {
-    grid-column-start: 1;
-    grid-column-end: 7;
-    display: grid;
-    grid-template-columns: 3fr 1fr;
-}
-.producto:nth-child(1) img {
-    height: 43rem;
-    width: 100%;
-    object-fit: cover;
-}
-.producto:nth-child(2) {
-    grid-column-start: 1;
-    grid-column-end: 4;
-}
-.producto:nth-child(2) img,
-.producto:nth-child(3) img {
-    height: 30rem;
-    width: 100%;
-    object-fit: cover;
-}
-.producto:nth-child(3) {
-    grid-column-start: 4;
-    grid-column-end: 7;
-}
-.producto:nth-child(4) {
-    grid-column-start: 1;
-    grid-column-end: 3;
-}
-.producto:nth-child(5) {
-    grid-column-start: 3;
-    grid-column-end: 5;
-}
-.producto:nth-child(6) {
-    grid-column-start: 5;
-    grid-column-end: 7;
+
+@media (min-width: 768px) {
+    
+    .listado-productos {
+        display: grid;
+        grid-template-columns: repeat(6, 1fr);
+        gap: 2rem;
+    }
+    .producto:nth-child(1) {
+        grid-column-start: 1;
+        grid-column-end: 7;
+        display: grid;
+        grid-template-columns: 3fr 1fr;
+    }
+    .producto:nth-child(1) img {
+        height: 43rem;
+        width: 100%;
+        object-fit: cover;
+    }
+    .producto:nth-child(2) {
+        grid-column-start: 1;
+        grid-column-end: 4;
+    }
+    .producto:nth-child(2) img,
+    .producto:nth-child(3) img {
+        height: 30rem;
+        width: 100%;
+        object-fit: cover;
+    }
+    .producto:nth-child(3) {
+        grid-column-start: 4;
+        grid-column-end: 7;
+    }
+    .producto:nth-child(4) {
+        grid-column-start: 1;
+        grid-column-end: 3;
+    }
+    .producto:nth-child(5) {
+        grid-column-start: 3;
+        grid-column-end: 5;
+    }
+    .producto:nth-child(6) {
+        grid-column-start: 5;
+        grid-column-end: 7;
+    }
 }
 .producto {
     background-color: #037bc0;
+    margin-bottom: 2rem;
+}
+@media (min-width: 768px) {
+    .producto {
+        margin-bottom: 0;
+    }
+    
+}
+
+.producto:last-of-type {
+    margin-bottom: 0;
 }
 
 .texto-producto {
@@ -204,17 +311,43 @@ img {
 }
 .site-footer h3 {
     margin-bottom: .5rem;
-}
-.grid-footer {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 2rem;
+    text-align: center;
 }
 
+@media (min-width: 768px) {
+    .site-footer h3 {
+        text-align: left;
+    }
+    .grid-footer {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 2rem;
+    }
+    
+}
+
+.grid-footer > div {
+    margin-bottom: 2rem;
+}
+
+@media (min-width: 768px) {
+    .grid-footer > div {
+        margin: 0;
+    }
+    
+}
 .footer-menu a {
     display: block;
+    text-align: center;
 }
 
+@media (min-width: 768px) {
+    .footer-menu a {
+        text-align: left;
+    }
+
+    
+}
 .copyright {
     margin-top: 5rem;
     text-align: center;
@@ -231,25 +364,53 @@ img {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    padding: 5rem;
+}
+
+@media (min-width: 768px) {
+    .informacion-nosotros{
+        padding: 0;
+    }
 }
 
 /** Blog */
-.contenedor-blog {
-    display: grid;
-    grid-template-columns: 2fr 1fr;
-    column-gap: 4rem;
+@media (min-width: 768px) {
+    .contenedor-blog {
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+        column-gap: 4rem;
+    }
+    
 }
 .entrada {
     border-bottom: 2px solid #e1e1e1;
-    padding-bottom: 4rem;
     margin-bottom: 2rem;
+    padding-bottom: 4rem;
+}
+
+.entrada h2 {
+    text-align: center;
+}
+
+@media (min-width: 768px) {
+    .entrada h2{
+        text-align: left;
+    }
+}
+
+.contenido-blog{
+    padding: 2rem;
+
 }
 .entrada:last-of-type {
     border: none;
 }
-.entrada-meta {
-    display: flex;
-    justify-content: space-between;
+@media (min-width:768px ) {
+    
+    .entrada-meta {
+        display: flex;
+        justify-content: space-between;
+    }
 }
 .entrada-meta p {
     font-weight: bold;
@@ -308,8 +469,16 @@ img {
     margin: 0;
     padding: 0;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
     gap: 2rem;
+   justify-content: center;
+   grid-template-columns: repeat(2, 1fr);
+}
+
+@media (min-width: 768px) {
+    .galeria{
+        grid-template-columns: repeat(3, 1fr);
+    
+    }
 }
 .galeria img {
     height: 40rem;
